@@ -12,6 +12,7 @@
 - Network service response time can be monitored
 - Added driver for HP A-series and V-series switches
 - MIB compiler correctly handles REFERENCE keyword in agent capabilities section
+- Oracle Tuxedo monitoring subagent
 - Management console:
     - New dashboard element "DCI summary table"
     - Cluster objects shown on status maps
